// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DailyReportが正しく表示される textをクリックするとtextが表示される 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Update
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        html
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        text
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        tweet
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div>
      <div
        style="white-space: pre-wrap; word-wrap: break-word; text-align: left; justify-content: left; align-items: left;"
      >
        RAW TEXT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DailyReportが正しく表示される ディフォルトではhtmlが表示される 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Update
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        html
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        text
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        tweet
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div>
      <div
        style="white-space: normal; overflow: hidden; text-align: left; justify-content: left; align-items: left;"
      >
        <span>
          HTML TEXT
          <span />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
